--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
+    "read-excel-file": "^5.8.8",
     "styled-components": "^6.1.13",
     "vite": "^5.2.0",
     "vite-jsconfig-paths": "^2.0.1",
