--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Joke App",
   "version": "1.0.0",
-  "homepage": "https://jokesapp.skyraantech.com/admin",
+  "homepage": "https://jokes.skyraanapps.com/admin",
   "private": true,
   "scripts": {
     "dev": "react-scripts start",
